# ByBit-AlgoTrading

./: Dockerfile  README.md  config.py  db.py  docker-compose.yml  init-db.sql  main.py  modules.py  my_account.session  my_bot.session  pyproject.toml  tg_log.py
database/: db.py
stock_api/: order_conn.py  socket_conn.py
trade/: token_trader.py
